samples/_failures_safe/1761005999_43982e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82b44117.c: In function ‘main’:
./samples/SAFE/__tmp_82b44117.c:174:5: error: expected expression at end of input
  174 |     if (token_count ==
      |     ^~
./samples/SAFE/__tmp_82b44117.c:174:5: error: expected declaration or statement at end of input
